--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
 
+<head>
+    <title> Rest Api</title>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+</head>
+
+<body>
 </body>
+
 </html>
